adding google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,15 @@
       })(window, document, "clarity", "script", "k5qllyouv7");
   </script>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-63VN8ZEWSQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-63VN8ZEWSQ');
+</script>
+
     <title>Roshan Bhatta</title>
   </head>
   <body>
